<resources>
    <string name="app_name">BostarDecksMobile</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="averse_label">Averse</string>
    <string name="averse_text">Sagen</string>
    <string name="tip_label">Tip</string>
    <string name="tip_text">monachijska saga przemawia do tłumu"</string>
    <string name="reverse_label">Reverse</string>
    <string name="reverse_text">Mówić</string>
</resources>