<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/averse_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/averse_label"
        android:textColor="#E91E63"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/averse_text_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/averse_text_textview"
        android:layout_width="80dp"
        android:layout_height="34dp"
        android:text="@string/averse_text"
        android:textColor="#100101"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/reverse_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566" />

    <TextView
        android:id="@+id/tip_text_textview"
        android:layout_width="256dp"
        android:layout_height="83dp"
        android:text="@string/tip_text"
        android:textColor="#100101"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tip_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/averse_text_textview" />

    <Button
        android:id="@+id/reverse_button"
        android:layout_width="164dp"
        android:layout_height="99dp"
        android:text="@string/reverse_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/tip_button"
        android:layout_width="164dp"
        android:layout_height="99dp"
        android:background="#3C4CAF8C"
        android:backgroundTint="#004CAF50"
        android:backgroundTintMode="add"
        android:text="@string/tip_label"
        android:textColor="#FF0000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/reverse_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>